--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4161,9 +4161,11 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
 .navbar {
   min-height: 65px;
 }
+
 @media (min-width: 768px) {
   .navbar-header {
     float: left;
@@ -4174,9 +4176,6 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   padding-left: 15px;
   overflow-x: visible;
   -webkit-overflow-scrolling: touch;
-  border-top: 1px solid transparent;
-  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
-          box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
 }
 .navbar-collapse.in {
   overflow-y: auto;
@@ -4288,7 +4287,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   margin-top: 8px;
   margin-right: 15px;
   margin-bottom: 8px;
-  background-color: transparent;
+  background-color: ghostwhite;
   background-image: none;
   border: 1px solid transparent;
   border-radius: 4px;
@@ -4483,8 +4482,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #f8f8f8;
-	opacity: 0.5;
+  background-color: rgba(245,245,245,0.3);
 }
 .navbar-default .navbar-brand {
   color: #777;
