--- a/css/style.scss
+++ b/css/style.scss
@@ -36,8 +36,6 @@ body {
     background: -o-linear-gradient(#000, #fff); /* For Opera */
     background: linear-gradient(#000, #fff); /* For Chrome */
 	background: url(../images/riverview_bg_img.jpg) no-repeat scroll;
-	background-position-x: center;
-    background-position-y: top;
     background-position: center top;
     background-repeat: no-repeat;
     position: absolute;
@@ -61,7 +59,8 @@ h2, h3 {
 
 
 p {
-	font: 1.5em $font_paragraphs;
+	font-family: $font_paragraphs;
+	line-height: 1.3em;
 }
 
 nav {
