--- a/css/style.css
+++ b/css/style.css
@@ -58,3 +58,10 @@ nav li {
 
 .home_page .jumbotron {
   background-color: transparent; }
+
+form input {
+  width: 100%; }
+form textarea {
+  width: 100%; }
+form .submit {
+  width: 100px; }
