--- a/css/style.scss
+++ b/css/style.scss
@@ -88,3 +88,17 @@ nav {
 		background-color: transparent;
 	}
 }
+
+form {
+	input {
+		width: 100%;
+	}
+	
+	textarea {
+		width: 100%;
+	}
+	
+	.submit {
+		width: 100px;
+	}
+}
