--- a/css/style.scss
+++ b/css/style.scss
@@ -89,13 +89,13 @@ nav {
 	}
 }
 
-
-.home_page {
+  .home_page {
 	  .jumbotron {
 		  p {
 		  font-weight: bold;
-		  color: #ddd; 
-		  text-shadow: 1px 1px 5px #000;
+		  font-size: 18px;
+		  color: #fff;
+		  text-shadow: 2px 2px 5px #000;
 		  }
 	  }
   }
