--- a/css/style.css
+++ b/css/style.css
@@ -61,8 +61,9 @@ nav li {
 
 .home_page .jumbotron p {
   font-weight: bold;
-  color: #ddd;
-  text-shadow: 1px 1px 5px #000; }
+  font-size: 18px;
+  color: #fff;
+  text-shadow: 2px 2px 5px #000; }
 
 form input {
   width: 100%; }
