refinement housing and index page

--- a/css/style.css
+++ b/css/style.css
@@ -61,9 +61,16 @@ nav li {
 
 .home_page .jumbotron p {
   font-weight: bold;
-  font-size: 18px;
+  font-size: 20px;
   color: #fff;
-  text-shadow: 2px 2px 5px #000; }
+  text-shadow: 2px 2px 2px #000;
+  background-color: rgba(43, 42, 65, 0.5);
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid transparent; }
+
+.housing_page {
+  margin-top: 20px; }
 
 form input {
   width: 100%; }
