--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ html, body, img, ul, li, ol, h1, h2, h3, h4, h5, h6, div {
   box-sizing: border-box; }
 
 html {
-  font-family: "Open Sans", Arial, Helvetica, sans-serif; }
+  font-family: "Open Sans", sans-serif; }
 
 body {
   min-width: 280px;
@@ -40,7 +40,7 @@ h2, h3 {
   color: #7c7b7b; }
 
 p {
-  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-family: "Open Sans", sans-serif;
   line-height: 1.3em; }
 
 nav h1 {
@@ -58,19 +58,21 @@ nav li {
 
 .home_page .jumbotron {
   background-color: transparent; }
-
-.home_page .jumbotron p {
-  font-weight: bold;
-  font-size: 20px;
-  color: #fff;
-  text-shadow: 2px 2px 2px #000;
-  background-color: rgba(43, 42, 65, 0.5);
-  padding: 10px;
-  border-radius: 5px;
-  border: 1px solid transparent; }
+  .home_page .jumbotron p {
+    font-weight: bold;
+    font-size: 20px;
+    color: #fff;
+    text-shadow: 2px 2px 2px #000;
+    background-color: rgba(43, 42, 65, 0.5);
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid transparent; }
 
 .housing_page {
   margin-top: 20px; }
+  .housing_page h2 {
+    text-align: center;
+    margin-bottom: 0; }
   .housing_page h3 {
     padding-left: 10px; }
   .housing_page li {
@@ -80,6 +82,35 @@ nav li {
     margin-left: 40px; }
   .housing_page ul.nested_indent li {
     margin-left: 80px; }
+
+.program_page .jumbotron {
+  background-color: transparent; }
+  .program_page .jumbotron p {
+    font-weight: bold;
+    font-size: 20px;
+    color: #fff;
+    text-shadow: 2px 2px 2px #000;
+    background-color: rgba(43, 42, 65, 0.5);
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid transparent; }
+.program_page h3 {
+  padding-left: 10px; }
+.program_page h2 {
+  text-align: center;
+  color: #fff;
+  padding-top: 20px;
+  padding-bottom: 20px; }
+.program_page p {
+  color: #ddd;
+  font-size: 18px; }
+.program_page li {
+  line-height: 1.5em;
+  color: #ccc; }
+.program_page ul li {
+  margin-left: 40px; }
+.program_page ul.nested_indent li {
+  margin-left: 80px; }
 
 form input {
   width: 100%; }
