--- a/css/style.scss
+++ b/css/style.scss
@@ -5,7 +5,7 @@
 /* Sass Setup */
 $font_heading_1: "Times New Roman", Times, serif;
 $font_sub_headings: "Open Sans Condensed", sans-serif;
-$font_paragraphs: "Open Sans", Arial, Helvetica, sans-serif;
+$font_paragraphs: "Open Sans", sans-serif;
 $bg_color: #fff;
 $text_color: black;
 $radius: 10px;
@@ -48,7 +48,6 @@ h1 {
 }
 
 
-
 h2, h3 {
 	font-family: $font_sub_headings;
 	font-weight: lighter;
@@ -56,7 +55,6 @@ h2, h3 {
 	letter-spacing: -1.5px;
 	color: #7c7b7b;
 }
-
 
 p {
 	font-family: $font_paragraphs;
@@ -84,13 +82,9 @@ nav {
 }
 
 .home_page {
-	.jumbotron {
-		background-color: transparent;
-	}
-}
-
-.home_page {
   .jumbotron {
+	  background-color: transparent;
+	  
 	  p {
 	  font-weight: bold;
 	  font-size: 20px;
@@ -107,6 +101,11 @@ nav {
 
 .housing_page {
 	margin-top: 20px;
+	
+	h2 { 
+		text-align: center; 
+		margin-bottom: 0;
+	}
 
 	h3 {
 		padding-left: 10px;
@@ -122,7 +121,51 @@ nav {
 	ul.nested_indent li {
 		margin-left: 80px;
 	}
+}
+
+.program_page {
+	  
+	.jumbotron {
+	  background-color: transparent;
+	  
+	 p {
+	  font-weight: bold;
+	  font-size: 20px;
+	  color: #fff;
+	  text-shadow: 2px 2px 2px #000;
+	  background-color: rgba(43,42,65,0.50);
+	  padding: 10px;
+	  border-radius: 5px;
+	  border: 1px solid transparent;
+	  }
+  	}
 	
+	h3 {
+		padding-left: 10px;
+	}
+	h2 {
+		text-align: center;
+		color: #fff;
+		padding-top: 20px;
+		padding-bottom: 20px;
+	}
+	p {
+		color: #ddd;
+		font-size: 18px;
+	}
+	
+	li {
+		line-height: 1.5em;
+		color: #ccc;
+	}
+	
+	ul li{ 
+	  margin-left: 40px;
+	}
+	ul.nested_indent li {
+		margin-left: 80px;
+	}
+
 }
 
 form {
