program page completed adjustment

--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,8 @@ nav li {
   padding-bottom: 20px; }
 .program_page p {
   color: #ddd;
-  font-size: 18px; }
+  font-size: 18px;
+  text-align: justify; }
 .program_page li {
   line-height: 1.5em;
   color: #ccc; }
