--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,9 @@ body {
   /* For Opera */
   background: linear-gradient(#000, #fff);
   /* For Chrome */
-  background: url(../images/riverview-bg-img.jpg) no-repeat scroll center top;
-  background-size: 1920px 705px;
+  background: url(../images/riverview-bg-img.jpg) no-repeat scroll;
+  background-position: center top;
+  background-repeat: no-repeat;
   position: absolute;
   width: 100%;
   height: 100%; }
